Fix loader jumping around in certain situations

--- a/webextension/assets/player.css
+++ b/webextension/assets/player.css
@@ -22,15 +22,11 @@ body {
 .wrapper {
   position: absolute;
   z-index: 100;
-  width: 100%;
-  height: 100%;
   overflow: visible;
 }
 
 .bgimg {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,11 +42,11 @@ canvas {
   max-height: 100%;
 }
 
-canvas:focus-visible {
+/* canvas:focus-visible {
   outline: 2px solid blue;
   outline: 5px auto Highlight;
   border-radius: 2px;
-}
+} */
 
 .player-controls {
   opacity: 0;
